--- a/style.css
+++ b/style.css
@@ -1,222 +1,396 @@
-html,
-body{
-    height: 100%;
-    width: 100%;
-    font-family: 'Sofadi One', cursive;
+body {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  margin: 0;
+  overflow-x: hidden;
+}
+/* The navigation bar */
+.navbar {
+    overflow: hidden;
+    background-color: rgb(241, 241, 241);
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+    font-size: 17px;
+    box-sizing: border-box;
 }
 
-a{
-    text-decoration: none;
-    color: #666;
-}
-
-
-/* --- Banner -------------------------- */
-#banner{
-    width: 100%;
-    height: 70%;
-    background: url(img/banner.jpg) 0 0 repeat;
-    background-attachment: fixed;
-    position: relative;
-}
-
-    #banner #overlay{
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        background: url(img/overlay.png) 0 100% repeat-x;
-    }
-
-
-    #logo h1{
-        text-align: center;
-        font-family: 'Montez', cursive;
-        font-size: 25px;
-    }
-
-    #logo #jobdesc{
-        display: block;
-        width: 100%;
-        text-align: center;
-        margin: 5px auto;
-        color: #eee;
-        font-size: 20px;
-        text-shadow: 1px 1px 1px #000;
-    }
-
-
-/* --- Section ------------------------- */
-
-section{
-    width: 900px;
-    max-width: 900px;
-    margin: 40px auto;
-}
-
-    section span{
-        background: #C09A7F;
-        padding: 8px;
-        border-radius: 0 5px 0 0;
-        color: #eee;
-        font-size: 12px;
-    }
-
-    .section{
-        display: table;
-        width: 100%;
-    }
-
-        .section .content{
-            display: table-row;
-            width: 100%;
-        }
-        .section .box{
-            display: table-cell;
-            padding: 10px;
-            width:31.3333%;
-        }
-
-            .section .box:nth-child(3){
-                border-radius: 0 0 10px 0;
-            }
-            .section .box:hover{
-                background: #ddd;
-            }
-            .section .box h3{
-                padding: 10px;
-                font-size: 18px;
-                font-weight: bold;
-            }
-            .section .box p{
-                padding: 10px;
-                line-height: 1.5em;
-            }
-            .section .box img{
-                width:100%;
-                max-width: 100%;
-                height: auto;
-                border-radius: 10px;
-            }
-
-
-.testimonial{
-    position: relative;
-    width: 900px;
-    max-width: 900px;
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    display: block;
+    color: #274456;
     text-align: center;
-    margin: 20px auto;
-    background: #C09A7F;
-    color: #fff;
-}
-    .testimonial span{
-        position: absolute;
-        right: 0;
-        bottom:0;
-        padding: 5px;
-        background: rgba(0, 38, 51, .5);
-        font-size: 11px;
-    }
-    .testimonial h3{
-        margin: 50px;
-        padding: 50px;
-        display: block;
-        line-height: 2em;
-    }
-
-        .testimonial h3:before{
-            content: " \201C ";
-        }
-        .testimonial h3:after{
-            content: " \201D ";
-        }
-
-
-footer{
-    border-top: 3px solid #ddd;
-    padding: 30px auto;
-    display: table;
-    width: 900px;
-    max-width: 900px;
-    margin: 40px auto;
-    font-size: 12px;
-}
-    footer a{
-        text-decoration: none;
-        color: #666;
-        padding: 2px;
-        border-bottom: 1px solid #ddd;
-    }
-        footer a:hover{
-            background: #ddd;
-        }
-
-    footer .content{
-        width: 100%;
-        display: table-row;
-        vertical-align: center;
-    }
-        footer .box{
-            display: table-cell;
-            padding: 10px;
-            width: 50%;
-        }
-
-            footer .box:nth-child(2){
-                text-align: right;
-            }
-
-
-@media (max-width: 860px){
-
-    section,
-    .gallery,
-    .testimonial,
-    footer{
-        width: 90%;
-    }
-    .gallery{
-        padding: 0;
-    }
-    .section .box:nth-child(1){
-        border-radius: 0;
-    }
-
-    footer{
-        text-align: center;
-    }
-    footer .box{
-        display: block;
-        width: 90%;
-    }
+    padding-bottom: 9px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 10px;
+    text-decoration: none;
 
 }
-@media (max-width: 640px){
-    #banner{
-        height: 101%;
-        min-height: 350px;
-    }
-    #logo h1{
-        font-size: 75px;
+a {
+  color: inherit;
+  font-style: normal;
+  text-decoration: inherit;
+  cursor: pointer;
+}
+
+a:hover {
+  opacity: 0.4;
+}
+
+
+.main-section{
+  /* background: url(../images/main-header.jpg) no-repeat center center scroll; */
+  background: rgba(34,125,170,1);
+  background: -moz-linear-gradient(top: 20, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(34,125,170,1)), color-stop(100%, rgba(81,172,205,1)));
+  background: -webkit-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -o-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -ms-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: linear-gradient(to bottom, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  display: block;
+  width: 100%;
+  height: 300px;
+  position: static;
+  -webkit-background-size: auto;
+  -moz-background-size: auto;
+  -o-background-size: auto;
+  background-size: auto;
+  color: white;
+}
+
+.main-section h1 {
+  font-size: 60px;
+}
+
+.main-section h1:after {
+  content: ' ';
+  display: block;
+  width: 50px;
+  margin: 10px auto -10px 0;
+  border: 2px solid #fff;
+}
+
+.main-section p {
+  font-size: 30px;
+  color: #deeef5;
+  letter-spacing: 1px;
+}
+
+.main-section > .section-content {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 10px 100px;
+  text-align: left;
+}
+
+.main-section p {
+  font-size: 20px;
+}
+
+.main-section h2 {
+  font-weight: 100;
+  color: #deeef5;
+}
+
+.main-section h2 > strong {
+  color: white;
+}
+
+.section {
+  display: block;
+}
+
+.section-content {
+  padding: 100px 100px;
+  display: block;
+  overflow: auto;
+}
+
+.section-content .content > div {
+  padding-left: 20px;
+}
+
+.blue-bg > .section-content{
+  /* background-color: #3295be; */
+  background: rgba(34,125,170,1);
+  background: -moz-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(34,125,170,1)), color-stop(100%, rgba(81,172,205,1)));
+  background: -webkit-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -o-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -ms-linear-gradient(top, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: linear-gradient(to bottom, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#227daa', endColorstr='#51accd', GradientType=0 );
+}
+
+
+.content p {
+  margin: 0;
+  font-size: 18px;
+  color: white;
+  line-height: 30px;
+  letter-spacing: 1px;
+}
+
+.title > h1 {
+  margin: 0;
+  text-transform: uppercase;
+  font-size: 26px;
+  letter-spacing: 2px;
+}
+
+.white-bg .title h1 {
+  color: #3295be;
+}
+
+.white-bg > .section-content {
+  background-color: white;
+}
+
+.blue-bg .title h1 {
+  color: white;
+}
+
+.white-bg p, .white-bg h2 {
+  color: #58798c;
+}
+
+.title h1:after {
+  content: ' ';
+  display: block;
+  width: 50px;
+  margin: 10px 0;
+}
+
+.blue-bg .title > h1:after {
+  border: 2px solid #fff;
+}
+
+.white-bg .title > h1:after {
+  border: 2px solid #3295be;
+}
+
+.title {
+  float: left;
+  width: 20%;
+}
+
+.content {
+  float: left;
+  width: 80%;
+}
+
+.box {
+  border: 1px solid #89bbd3;
+  border-radius: 10px;
+  padding: 20px;
+  color: white;
+  margin-bottom: 20px;
+
+  transition: opacity 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+  -ms-transition: all ease 0.5s ;
+  transition: all ease 0.5s ;
+}
+
+.box:hover {
+  background: rgba(255,255,255,0.1);
+}
+
+h2 {
+  margin: 0;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+}
+
+.blue-bg h2 {
+  color: white;
+  text-transform: none;
+}
+
+.blue-bg p {
+  color: #deeef5;
+}
+
+.box h2, .box img {
+  display: inline;
+}
+
+.box img {
+  margin-left: 10px;
+}
+
+.box a:hover {
+  opacity: 0.5;
+}
+
+.box p {
+  color: #95c5db;
+}
+
+.small {
+  font-size: 14px;
+  color: #aac7d9;
+  margin-bottom: 10px;
+}
+
+.w3-progress-container {
+  width:90%;
+  height:0.7em;
+  position:relative;
+  background-color:#deeef5;
+  margin-bottom: 30px;
+
+  transition: opacity 0.5s;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+  -ms-transition: all ease 0.5s ;
+  transition: all ease 0.5s ;
+}
+
+.w3-progress-container:hover {
+  opacity: 0.5;
+}
+
+.w3-progressbar {
+  background: rgba(34,125,170,1);
+  background: -moz-linear-gradient(left, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -webkit-gradient(left top, right top, color-stop(0%, rgba(34,125,170,1)), color-stop(100%, rgba(81,172,205,1)));
+  background: -webkit-linear-gradient(left, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -o-linear-gradient(left, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: -ms-linear-gradient(left, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  background: linear-gradient(to right, rgba(34,125,170,1) 0%, rgba(81,172,205,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#227daa', endColorstr='#51accd', GradientType=1 );
+  height:100%;
+  position:absolute;
+  line-height:inherit;
+}
+
+.dual-col {
+  width: 50%;
+  float: left;
+}
+
+.dual-col h2 {
+  color: #2473a0;
+  font-size: 15px;
+  margin-bottom: 10px;
+}
+
+.dual-col img {
+  width: 90%;
+  border: 1px solid #eee;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+a > img {
+  cursor: pointer;
+}
+
+.dual-col.img-col {
+  margin-bottom: 60px;
+}
+
+.dual-col.img-col:nth-child(7) {
+  margin-bottom: 0;
+}
+
+.dual-col.img-col:last-child {
+  margin-bottom: 0;
+}
+
+.tag {
+  border: 1px solid #ddd;
+  display: inline-block;
+  border-radius: 6px;
+  padding: 8px 10px;
+  font-size: 12px;
+  color: #aaa;
+  text-transform: uppercase;
+  margin-right: 5px;
+}
+
+.footer .section-content {
+  padding: 0 60px;
+  border-top: 1px #eee solid;
+  color: #aaa;
+  text-align: center;
+}
+
+@media only screen and (max-width: 1200px) {
+    .title {
+      width: 40%;
     }
 
-    .gallery .box{
-        /*display: block;*/
+  .content {
+    width: 60%;
+  }
+
+  .section-content .content > div {
+    padding-left: 0;
+  }
+
+  .section-content {
+    padding: 60px 30px;
+  }
+
+  .title img {
+    margin-bottom: 20px;
+  }
+
+  .dual-col {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+    .title, .content {
+      width: 100%;
     }
 
-    .section .box{
-        margin:auto;
-        display: block;
-        width: 80%;
-        padding: 5%;
-        border-radius: 0;
-    }
-    footer .box:nth-child(2){
-        text-align: center;
-        width: 90%;
-    }
-    footer .box strong{
-        display: block;
-    }
+  .section-content .content > div {
+    padding-left: 0;
+  }
+
+  .section-content {
+    padding: 60px 30px;
+  }
+
+  .title img {
+    margin-bottom: 20px;
+  }
+
+  .w3-progress-container {
+    width: 100%;
+  }
+
+  .footer {
+    text-align: center;
+  }
+
+  .main-section h1 {
+    font-size: 40px;
+  }
+
+  .main-section {
+    height: 670px;
+  }
+
+  .main-section > .section-content {
+    padding: 10px 30px;
+  }
+
+  .dual-col img {
+    width: 100%;
+  }
+
+  .dual-col.img-col:nth-child(7) {
+    margin-bottom: 60px;
+  }
 }
