--- a/style.css
+++ b/style.css
@@ -3,6 +3,18 @@ body {
   margin: 0;
   overflow-x: hidden;
 }
+a {
+
+	color: #4C9CF1;
+	text-decoration: none;
+	font-weight: bold;
+
+}
+
+a:hover {
+
+	color: #444;
+}
 nav {
 
 	float: right;
@@ -44,16 +56,7 @@ li {
 	color: #2262AD;
 
 }
-a {
-  color: inherit;
-  font-style: normal;
-  text-decoration: inherit;
-  cursor: pointer;
-}
 
-a:hover {
-  opacity: 0.4;
-}
 
 
 .main-section{
