--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   overflow-x: hidden;
 }
+
 a {
 
 	color: #4C9CF1;
@@ -14,6 +15,18 @@ a {
 a:hover {
 
 	color: #444;
+}
+header {
+
+	background: #fff;
+	width: 100%;
+	height: 76px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	border-bottom: 4px solid #4C9CF1;
+	z-index: 100;
+
 }
 nav {
 
