--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ nav {
 	display: hidden;
 	width: 40px;
 	height: 40px;
-	background: #4C8FEC url(../img/skill.png) center;
+	background: #4C8FEC url(../img/niEBEbMXT.png) center;
 
 }
 
